Revert "Revert "#7480: Add timeout support""
This reverts commit ff17bfb